# KeywordMiner-EngageAI

./: GNews_Downloader.py  GNews_Keyword_Analysis.ipynb  Keywords_Extractor_Factory.py  README.md  pyproject.toml
src/datas/: us_elections_news.csv
